<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/score_activity"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:text="@string/q1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/button_to_main_activity"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#228B22"
        android:text="@string/true_button"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/false_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/false_button"
        app:layout_constraintTop_toBottomOf="@+id/score_activity" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#C41E3A"
        android:text="@string/false_button"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/button_to_main_activity" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/next_question_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/false_button" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:text="@string/done_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="34dp"
        android:text="@string/score_textview"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/score_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>